# terminal-falling-sand

./: pyproject.toml
terminal_falling_sand/: __main__.py  args.py  cell.py  cell_state.py  colors.py  coordinate.py  coordinates.py  element.py  elements.py  grid.py  matrix.py  scenarios.py  simulation.py  state.py
